tests/snapshots/snapshot_sub_line_selector__ip_info_popup_open.snap
---
source: tests/snapshot_sub_line_selector.rs
expression: open.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name         Hits  Services                                      █"
"│                                                                              █"
"│ █ 10.0.0.1  alpha.local  1                                                   █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                          ┌10.0.0.1─────────────────┐                         █"
"│                          │alpha.local              │                         █"
"│                          │Updated 0s ago           │                         █"
"│                          │Last known status: Online│                         █"
"│                          │─────────────────────────│                         █"
"└──────────────────────────│<P>: port scan           │─────────────────────────┘"
"                          S└─────────────────────────┘                          "
" Log Level: Info, showing 0 msgs (max: 1000)                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
