tests/snapshots/snapshot_sub_line_selector__single_line_copy_flash.snap
---
source: tests/snapshot_sub_line_selector.rs
expression: term.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name             Hits  Services                                  █"
"│                                                                              █"
"│ █ 10.0.0.1  only-name.local  1                                               █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                         Scanning potential hosts 0/1337                        "
" Log Level: Info, showing 0 msgs (max: 1000)                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
