tests/snapshots/snapshot_sub_line_selector__sub_line_individual_copy_flash.snap
---
source: tests/snapshot_sub_line_selector.rs
expression: term.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name         Hits  Services                                      █"
"│                                                                              █"
"│ █ 10.0.0.1  alpha.local  1                                                   █"
"│ █           beta.local                                                       █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                         Scanning potential hosts 0/1337                        "
" Log Level: Info, showing 0 msgs (max: 1000)                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
