tests/snapshots/snapshot_sub_line_selector__sub_line_selector_at_copy_all.snap
---
source: tests/snapshot_sub_line_selector.rs
expression: at_copy_all.backend()
---
"┌1 IPs discovered────────────────────────────────────────────────────────v1.2.3┐"
"│   IP        Name           Hits  Services                                    █"
"│                                                                              █"
"│ █ 10.0.0.1    alpha.local  1                                                 █"
"│ █             beta.local                                                     █"
"│             ▶ [ copy all ]                                                   █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"│                                                                              █"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                         Scanning potential hosts 0/1337                        "
" Log Level: Info, showing 0 msgs (max: 1000)                                    "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
